--- a/datacleaning.ipynb
+++ b/datacleaning.ipynb
@@ -13691,6 +13691,135 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lastauthorupdate</th>\n",
+       "      <th>firstauthorupdate</th>\n",
+       "      <th>daysactive</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1295</th>\n",
+       "      <td>2023-02-04</td>\n",
+       "      <td>2014-02-05</td>\n",
+       "      <td>3286.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1321</th>\n",
+       "      <td>2023-02-04</td>\n",
+       "      <td>2014-02-05</td>\n",
+       "      <td>3286.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>834</th>\n",
+       "      <td>2023-02-04</td>\n",
+       "      <td>2014-02-05</td>\n",
+       "      <td>3286.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1319</th>\n",
+       "      <td>2023-02-04</td>\n",
+       "      <td>2014-02-05</td>\n",
+       "      <td>3286.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1294</th>\n",
+       "      <td>2023-02-04</td>\n",
+       "      <td>2014-02-05</td>\n",
+       "      <td>3286.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1156</th>\n",
+       "      <td>2019-04-07</td>\n",
+       "      <td>2019-04-07</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>684</th>\n",
+       "      <td>2023-02-25</td>\n",
+       "      <td>2023-02-25</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>682</th>\n",
+       "      <td>2023-02-25</td>\n",
+       "      <td>2023-02-25</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>672</th>\n",
+       "      <td>2023-02-26</td>\n",
+       "      <td>2023-02-26</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1322</th>\n",
+       "      <td>2013-12-16</td>\n",
+       "      <td>2013-12-16</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1323 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     lastauthorupdate firstauthorupdate  daysactive\n",
+       "1295       2023-02-04        2014-02-05      3286.0\n",
+       "1321       2023-02-04        2014-02-05      3286.0\n",
+       "834        2023-02-04        2014-02-05      3286.0\n",
+       "1319       2023-02-04        2014-02-05      3286.0\n",
+       "1294       2023-02-04        2014-02-05      3286.0\n",
+       "...               ...               ...         ...\n",
+       "1156       2019-04-07        2019-04-07         0.0\n",
+       "684        2023-02-25        2023-02-25         0.0\n",
+       "682        2023-02-25        2023-02-25         0.0\n",
+       "672        2023-02-26        2023-02-26         0.0\n",
+       "1322       2013-12-16        2013-12-16         0.0\n",
+       "\n",
+       "[1323 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "working_df[['lastauthorupdate','firstauthorupdate','daysactive']].sort_values(by=['daysactive'], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
    "outputs": [],
