editted the webscraper

--- a/datacleaning.ipynb
+++ b/datacleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -31,11 +31,12 @@
        "       'language', 'words', 'kudos', 'comments', 'bookmarks', 'hits',\n",
        "       'warning', 'mainship', 'relationship', 'characters', 'tags', 'summary',\n",
        "       'rating', 'chapter', 'chapter_max', 'completion', 'currentdate',\n",
-       "       'datediff', 'classification'],\n",
+       "       'datediff', 'classification', 'lastauthorupdate', 'firstauthorupdate',\n",
+       "       'author_lastupdate_diff', 'daysactive', 'author_activity'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +85,7 @@
        "Name: currentdate, Length: 1323, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +117,7 @@
        "Name: datediff, Length: 1323, dtype: float64"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +149,7 @@
        "Name: classification, Length: 1323, dtype: object"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +171,7 @@
        "       'Teen And Up Audiences'], dtype=object)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +206,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_num_item(column):\n",
+    "    item=[]\n",
+    "    for row in column:\n",
+    "        row_item = row.replace(\"[\",\"\").replace(\"]\",\"\").replace(\"'\",\"\").replace('\"','').split(\",\")\n",
+    "        if row_item!=['']:\n",
+    "            item.append(len(row_item))\n",
+    "        else:\n",
+    "            item.append(0) \n",
+    "    return item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "working_df['num_relationship']=get_num_item(working_df['relationship'])\n",
+    "working_df['num_characters']=get_num_item(working_df['characters'])\n",
+    "working_df['num_tags']=get_num_item(working_df['tags'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"['Lucy Carlyle & George Cubbins | George Karim & Anthony Lockwood', 'Lucy Carlyle/Anthony Lockwood', 'Cassandra Cain & Tim Drake & Dick Grayson & Duke Thomas & Jason Todd & Bruce Wayne & Damian Wayne', 'George Cubbins | George Karim & Everyone', 'Tim Drake & Dick Grayson & Alfred Pennyworth & Jason Todd & Bruce Wayne & Damian Wayne']\""
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "working_df['relationship'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -7265,7 +7314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -13540,7 +13589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -13658,7 +13707,7 @@
        "[485 rows x 3 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13671,16 +13720,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "working_df=working_df.merge(author_df, how='left', on='author')"
+    "if 'firstauthorupdate_x' in working_df.columns:\n",
+    "    working_df=working_df.drop(columns=['firstauthorupdate_x','lastauthorupdate_x', 'lastauthorupdate_y','firstauthorupdate_y'])\n",
+    "    working_df=working_df.merge(author_df, how='left', on='author')\n",
+    "else:\n",
+    "    working_df=working_df.merge(author_df, how='left', on='author')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['link', 'title', 'author', 'published', 'updatedate', 'chapters',\n",
+       "       'language', 'words', 'kudos', 'comments', 'bookmarks', 'hits',\n",
+       "       'warning', 'mainship', 'relationship', 'characters', 'tags', 'summary',\n",
+       "       'rating', 'chapter', 'chapter_max', 'completion', 'currentdate',\n",
+       "       'datediff', 'classification', 'author_lastupdate_diff', 'daysactive',\n",
+       "       'author_activity', 'num_relationship', 'num_characters', 'num_tags',\n",
+       "       'lastauthorupdate', 'firstauthorupdate'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "working_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13691,7 +13778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -13809,7 +13896,7 @@
        "[1323 rows x 3 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13820,7 +13907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
