--- a/webscrapper.ipynb
+++ b/webscrapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,24 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "from datetime import datetime"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date and time = 27042023_0928\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -237,15 +253,13 @@
     }
    ],
    "source": [
-    "from datetime import datetime\n",
-    "\n",
     "# datetime object containing current date and time\n",
     "now = datetime.now()\n",
     " \n",
     "print(\"now =\", now)\n",
     "\n",
     "# dd/mm/YY H:M:S\n",
-    "dt_string = now.strftime(\"%d/%m/%Y %H:%M:%S\")\n",
+    "dt_string = now.strftime(\"%d%m%Y_%H%M\")\n",
     "print(\"date and time =\", dt_string)\n",
     "\n",
     "# Create an empty DataFrame to hold the data\n",
@@ -1451,7 +1465,181 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final.to_csv('ao3_lockwood_and_co_ao_21042023_1857.csv', index=False)"
+    "filename=f'ao3_lockwood_and_co_ao_{dt_string}.csv'\n",
+    "final.to_csv(filename, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "working_df = pd.read_csv(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'working_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_535/1818303398.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mworking_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'published'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_datetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mworking_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'published'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mworking_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'updatedate'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_datetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mworking_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'updatedate'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'working_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "working_df['published'] = pd.to_datetime(working_df['published'])\n",
+    "working_df['updatedate'] = pd.to_datetime(working_df['updatedate'])\n",
+    "working_df['currentdate'] = max(working_df['updatedate'])\n",
+    "working_df['datediff'] = (working_df['currentdate']-working_df['updatedate'])/np.timedelta64(1,'D')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "working_df['classification'] = working_df.apply(lambda row: 'oneshot' if row['chapter_max']=='1' else ('multichapter(complete)' if row['completion']=='completed' else ('multichapter(updating)' if row['datediff']<=60 else 'multichapter(dormant)')), axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_unique_item(column):\n",
+    "    item_dic={}\n",
+    "    for row in column:\n",
+    "        row_item = row.replace(\"[\",\"\").replace(\"]\",\"\").replace(\"'\",\"\").replace('\"','').split(\",\")\n",
+    "        for item in row_item:\n",
+    "            item=item.strip()\n",
+    "            if item in item_dic.keys():\n",
+    "                item_dic[item] = item_dic[item]+1\n",
+    "            else:\n",
+    "                item_dic[item] = 1\n",
+    "    item_keys=list(item_dic.keys())\n",
+    "    item_keys.sort()\n",
+    "    sorted_item = {i: item_dic[i] for i in item_keys}\n",
+    "    for k, v in sorted_item.items():\n",
+    "        print(k, v)\n",
+    "    return sorted_item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_num_item(column):\n",
+    "    item=[]\n",
+    "    for row in column:\n",
+    "        row_item = row.replace(\"[\",\"\").replace(\"]\",\"\").replace(\"'\",\"\").replace('\"','').split(\",\")\n",
+    "        if row_item!=['']:\n",
+    "            item.append(len(row_item))\n",
+    "        else:\n",
+    "            item.append(0) \n",
+    "    return item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "character=get_unique_item(working_df['characters'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "relationship=get_unique_item(working_df['relationship'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tags=get_unique_item(working_df['tags'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "author_df = working_df.groupby(['author'], as_index=False).agg({'updatedate':'max', 'published':'min'})\n",
+    "author_df = author_df.rename(columns={'updatedate':'lastauthorupdate','published':'firstauthorupdate'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'firstauthorupdate_x' in working_df.columns:\n",
+    "    working_df=working_df.drop(columns=['firstauthorupdate_x','lastauthorupdate_x', 'lastauthorupdate_y','firstauthorupdate_y'])\n",
+    "    working_df=working_df.merge(author_df, how='left', on='author')\n",
+    "else:\n",
+    "    working_df=working_df.merge(author_df, how='left', on='author')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "working_df['author_lastupdate_diff'] = (working_df['currentdate']-working_df['lastauthorupdate'])/np.timedelta64(1,'D')\n",
+    "working_df['daysactive'] = (working_df['lastauthorupdate']-working_df['firstauthorupdate'])/np.timedelta64(1,'D')\n",
+    "working_df['author_activity'] = working_df['author_lastupdate_diff'].apply(lambda x: 'active' if x<=60 else 'inactive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "working_df[['lastauthorupdate','firstauthorupdate','daysactive']].sort_values(by=['daysactive'], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "working_df['num_relationship']=get_num_item(working_df['relationship'])\n",
+    "working_df['num_characters']=get_num_item(working_df['characters'])\n",
+    "working_df['num_tags']=get_num_item(working_df['tags'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "working_df.to_csv(filename, index=False)"
    ]
   }
  ],
