Analyzed the user engagement

--- a/optimizedwebscrapper.ipynb
+++ b/optimizedwebscrapper.ipynb
@@ -23,6 +23,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate a function to generate random number from 1 to 245\n",
+    "def random_number():\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
