rearranged the files

--- a/webscrapper.ipynb
+++ b/webscrapper.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_pages(browser, maxpagenum):\n",
+    "def process_pages(browser, maxpagenum, linked):\n",
     "    # datetime object containing current date and time\n",
     "    now = datetime.now()\n",
     "    dt_string = now.strftime(\"%d%m%Y_%H%M\")\n",
@@ -118,7 +118,7 @@
     "        pagenum = p\n",
     "        time.sleep(10)\n",
     "        print(f'Processing page {pagenum}/{maxpagenum}')\n",
-    "        link = \"https://archiveofourown.org/tags/Lockwood%20*a*%20Co*d*%20-%20Jonathan%20Stroud/works?page=\" + str(pagenum)\n",
+    "        link = linked + str(pagenum)\n",
     "        browser.get(link)\n",
     "        data_list += get_links(browser)\n",
     "        print(len(data_list))\n",
@@ -302,11 +302,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = pd.DataFrame(columns=['link','title','author','published','updatedate','chapters','language','words','kudos','comments','bookmarks','hits','warning','relationship','characters','tags','summary','rating','series'])\n",
     "# Get page\n",
     "pagenum=1\n",
-    "link=\"https://archiveofourown.org/tags/Lockwood%20*a*%20Co*d*%20-%20Jonathan%20Stroud/works?page=\"+str(pagenum)\n",
-    "#link=\"https://archiveofourown.org/tags/Lockwood%20*a*%20Co*d*%20-%20Jonathan%20Stroud/works?page=1\"\n",
-    "browser.get(link)\n",
+    "link=\"https://archiveofourown.org/tags/Lockwood%20*a*%20Co*d*%20-%20Jonathan%20Stroud/works?page=\"\n",
+    "browser.get(link+str(pagenum))\n",
     "\n",
     "maxpagenum=int(browser.find_element(By.XPATH,'//ol[1]/li[13]').text.strip())"
    ]
@@ -482,13 +482,40 @@
     }
    ],
    "source": [
-    "links_list, dt_string = process_pages(browser, maxpagenum)\n",
+    "links_list1, dt_string = process_pages(browser, maxpagenum, link)\n",
     "# Wait for 10 seconds\n",
     "time.sleep(10)\n",
-    "browser.quit()\n",
-    "data = pd.DataFrame(columns=['link','title','author','published','updatedate','chapters','language','words','kudos','comments','bookmarks','hits','warning','relationship','characters','tags','summary','rating','series'])\n",
     "data['link'] = links_list\n",
     "data.to_csv('links.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pagenum=1\n",
+    "link=\"https://archiveofourown.org/tags/Lockwood%20*a*%20Co*d*%20(TV)/works?page=\"\n",
+    "browser.get(link+str(pagenum))\n",
+    "\n",
+    "maxpagenum=int(browser.find_element(By.XPATH,'//ol[1]/li[13]').text.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.quit()"
    ]
   },
   {
